--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,13 @@
 @import "https://fonts.googleapis.com/css?family=Material+Icons";
 @import "https://fonts.googleapis.com/css?family=Roboto:400,300";
 
-html, body {
-  display: flex;
-  flex-direction: column;
+html, body,app-root {
+  display: block;
   font-family: Roboto, Helvetica Neue Light, Helvetica Neue, Arial, Lucida Grande, sans-serif;
   margin: 0;
+  width: 100%;
+  max-width: 100%;
   height: 100%;
-}
-
-body {
-
-  margin: 0;
+  max-height: 100%;
+  overflow: hidden;
 }
